Renaming things Changed ComplexCase -> AllocationComplexCase throughout and aligned keys with suggestions from PR feedback to sync with other data sources.
