# config/routes.rb
@@ -25,8 +25,8 @@ Rails.application.routes.draw do
       end
       namespace :reference do
         resources :locations, only: %i[index show]
+        resources :allocation_complex_cases, only: :index
         resources :assessment_questions, only: :index
-        resources :complex_cases, only: :index
         resources :genders, only: :index
         resources :ethnicities, only: :index
         resources :nationalities, only: :index
