# spec/swagger/definitions/hand_coded_paths.json
@@ -544,11 +544,11 @@
       }
     }
   },
-  "/reference/complex_cases": {
+  "/reference/allocation_complex_cases": {
     "get": {
-      "summary": "Returns a list of complex cases",
+      "summary": "Returns a list of allocation complex cases",
       "tags": [
-        "ComplexCases"
+        "AllocationComplexCases"
       ],
       "consumes": [
         "application/vnd.api+json"
@@ -571,7 +571,7 @@
           "content": {
             "application/vnd.api+json": {
               "schema": {
-                "$ref": "get_complex_cases_responses.json#/200"
+                "$ref": "get_allocation_complex_cases_responses.json#/200"
               }
             }
           }
@@ -581,7 +581,7 @@
           "content": {
             "application/vnd.api+json": {
               "schema": {
-                "$ref": "get_complex_cases_responses.json#/401"
+                "$ref": "get_allocation_complex_cases_responses.json#/401"
               }
             }
           }
@@ -591,7 +591,7 @@
           "content": {
             "application/vnd.api+json": {
               "schema": {
-                "$ref": "get_complex_cases_responses.json#/415"
+                "$ref": "get_allocation_complex_cases_responses.json#/415"
               }
             }
           }
